[package]
name = "chap-app"
version = "0.1.0"
authors = ["Ali Ghahremani <alighahremani1377@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chap = "2.2.2"
dioxus = { version = "0.5", features = ["web"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
