[package]
name = "chap-app"
version = "0.1.0"
authors = ["Ali Ghahremani <alighahremani1377@gmail.com>"]
edition = "2021"

[dependencies]
chap = "2.5.0"
dioxus = { version = "0.7.1", features = ["web"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
web-sys = "0.3.69"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
# opt-level = "z"
# debug = false
# lto = true
# codegen-units = 1
# panic = "abort"
# strip = true
# incremental = false
